fix cropper width issue on channel settings page
the width of the image upload dialog got messed up when we upgraded a
bunch of material packages to fix an unrelated issue. most dialogs were
fixed right away, but the image dialogs on the channel settings got left
off. this takes care of them.

closes #2328
pr #2418

--- a/static/scss/profile-image.scss
+++ b/static/scss/profile-image.scss
@@ -87,6 +87,10 @@ $profile-image-small-size: 45px;
   h3 {
     border-bottom: none !important;
   }
+
+  .mdc-dialog__surface {
+    width: 100%;
+  }
 }
 
 .photo-dropzone {
